By default, claim PNaCl needs a JIT update: CheckVersionCompatibility is not called in the registration flow unless there is a version of PNaCl already on disk.

Bug: 781011
Change-Id: I9be05564bd9a40df6dba7a8256cea286bf5aec24
Reviewed-on: https://chromium-review.googlesource.com/752049
Reviewed-by: Sorin Jianu <sorin@chromium.org>
Commit-Queue: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513627}
Former-commit-id: c59b0960eb1c82e9a3c18c97dc94bd2d464ca634